--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h1> This gona be my personal site</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>GitHub Pages</title>
+</head>
+<body>
+  <h1>Hello World!</h1>
+  <h1>This gona be my personal site</h1>
+</body>
+</html>
